working carousel with custom images

--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -1,19 +1,52 @@
 <div ng-include="'partials/navbar'"></div>
 
-
-<!-- <div>
-  <div style="height: 305px">
-    <carousel interval="myInterval">
-      <slide ng-repeat="slide in slides" active="slide.active">
-        <img ng-src="{{slide.image}}" style="margin:auto;">
+<div class="main-content">
+	
+	<h1 class="title">Feature of the Week</h1>
+	
+	<div ng-controller="CarouselCtrl">
+		
+		<carousel interval="myInterval">
+			<slide ng-repeat="slide in slides" active="slide.active">
+				<img ng-src="{{slide.image}}" style="margin:auto;">
         <div class="carousel-caption">
-          <h1>{{slide.text}}</h1>
+          <h4>Slide {{$index}}</h4>
+          <p>{{slide.text}}</p>
         </div>
-      </slide>
-    </carousel>
-  </div>
-</div> -->
-<div>
-  <img src="https://graph.facebook.com/dfrancken/picture?type=large">
-  <img src= "https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10553501_10202549803927059_8194271759880672496_n.jpg?oh=512cd754d614a055a8e1b775789bf3cb&oe=547E2AB5&__gda__=1415257056_af00d8e2acd278bf3fb2503953aeb7eb">
+			</slide>
+		</carousel>
+	
+		<figure class="featured-person">
+			<img class="featured-image" src="">
+			<figcaption class="featured-caption"></figcaption>
+		
+			<p class="featured-name">John Doe</p>
+		</figure>
+
+  
+		<div class="timeline-container">
+			<ul class="timeline-list">
+				<li>A</li>
+				<li>B</li>
+				<li>C</li>
+				<li>D</li>
+			</ul>
+		</div>
+	
+	</div>
+	
+	<div ng-controller="CarouselCtrl">
+	  <div style="height: 305px">
+	    <carousel interval="myInterval">
+	      <slide ng-repeat="slide in slides" active="slide.active">
+	        <img ng-src="{{slide.image}}" style="margin:auto;">
+	        <div class="carousel-caption">
+	          <h4>Slide {{$index}}</h4>
+	          <p>{{slide.text}}</p>
+	        </div>
+	      </slide>
+	    </carousel>
+	  </div>
+	</div>
+
 </div>
