--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,8 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
+		<!-- Bootstrap CDN -->
+		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/normalize.css">
 		<link rel="stylesheet" href="styles/home.css">
@@ -70,6 +72,7 @@
         <script src="scripts/services/user.js"></script>
         <script src="scripts/directives/mongooseError.js"></script>
         <script src="scripts/controllers/about.js"></script>
+				<script src="scripts/controllers/CarouselCtrl.js"></script>
         <!-- endbuild -->
 </body>
 </html>
