Working on Saving Folks to Database

--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -1,17 +1,17 @@
 <div ng-include="'partials/navbar'"></div>
 
-<div class="main-content">
+<div class="main-content" ng-controller="CarouselCtrl">
 	
 	<h1 class="title">Feature of the Week</h1>
 	
-	<div ng-controller="CarouselCtrl">
+	<div >
 		
 		<carousel interval="myInterval">
 			<slide ng-repeat="slide in slides" active="slide.active">
 				<img ng-src="{{slide.image}}" style="margin:auto;">
 			</slide>
 		</carousel>
-    
+
 		<div class="timeline-container">
 			<ul class="timeline-list">
 				<li>A</li>
@@ -22,6 +22,11 @@
 		</div>
 	
 	</div>
-	
 
+  <p>
+    yo: 
+    {{testDude}}
+  </p>
 </div>
+
+   
