--- a/app/views/index.html
+++ b/app/views/index.html
@@ -74,6 +74,7 @@
         <script src="scripts/controllers/about.js"></script>
 		<script src="scripts/controllers/CarouselCtrl.js"></script>
         <script src="scripts/services/PersonService.js"></script>
+        <script src="scripts/controllers/Carousel.js"></script>
         <!-- endbuild -->
 </body>
 </html>
