--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,9 +18,12 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
 		<!-- Bootstrap CDN -->
 		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="styles/normalize.css">
 		<link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/normalize.css">
 		<link rel="stylesheet" href="styles/home.css">
+		<link rel="stylesheet" href="styles/carousel.css">	
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:100italic,400,300' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="styles/fonts.css">	
     <!-- endbuild -->
   </head>
   <body ng-app="hoGApp">
