--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -2,27 +2,19 @@
 
 <div class="main-content">
 	
-	<h1 class="title">Feature of the Week</h1>
+	<h1 class="feature-title">Feature of the Week</h1>
 	
-	<div ng-controller="CarouselCtrl">
+	<div class="featured-content" ng-controller="CarouselCtrl">
 		
 		<carousel interval="myInterval">
 			<slide ng-repeat="slide in slides" active="slide.active">
-				<img ng-src="{{slide.image}}" style="margin:auto;">
+				<img width='600px' ng-src="{{slide.image}}" style="margin:auto;">
         <div class="carousel-caption">
           <h4>Slide {{$index}}</h4>
           <p>{{slide.text}}</p>
         </div>
 			</slide>
 		</carousel>
-	
-		<figure class="featured-person">
-			<img class="featured-image" src="">
-			<figcaption class="featured-caption"></figcaption>
-		
-			<p class="featured-name">John Doe</p>
-		</figure>
-
   
 		<div class="timeline-container">
 			<ul class="timeline-list">
