--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -1,8 +1,3 @@
-<div class="header" ng-controller="NavbarCtrl">
-  <ul class="nav nav-pills pull-right">
-    <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-        <a ng-href="{{item.link}}">{{item.title}}</a>
-    </li>
-  </ul>
-  <h3 class="text-muted">Humans of Gastown</h3>
-</div>
+<header ng-controller="NavbarCtrl">
+	<h1 class="big-title">Humans of Gastown</h1>
+</header>
