--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -7,7 +7,7 @@
 	<div class="featured-content" ng-controller="CarouselCtrl">
 		
 		<carousel interval="myInterval">
-			<slide ng-repeat="slide in slides" active="slide.active">
+			<slide ng-repeat="slide in slides" active="slide.active" >
 				<img width='600px' ng-src="{{slide.picURL}}" style="margin:auto;">
         <div class="carousel-caption">
           <h2>{{slide.folkName}}</h2>
@@ -17,21 +17,11 @@
 			</slide>
 		</carousel>
 		
-		<div class="timeline-container">
-			<ul class="timeline-list">
-				<li>A</li>
-				<li>B</li>
-				<li>C</li>
-				<li>D</li>
-			</ul>
-		</div>
+		<div ng-repeat="tag in hashTags">
+      <a>{{tag}}</h3>
+    </div>
 	
 	</div>
-
-  <p>
-    yo: 
-    {{testDude}}
-  </p>
 </div>
 
    
