--- a/app/styles/carousel.css
+++ b/app/styles/carousel.css
@@ -14,6 +14,13 @@ carousel
 	width:40px !important;
 	height:70px !important;
 	background-repeat:none !important;
+	
+	/* previous rules from bootstrap */
+	position:absolute;
+	top:50%;
+	z-index:5;
+	display:inline-block;
+	margin-top:-20px;
 }
 
 .carousel-control > span:before
@@ -24,9 +31,15 @@ carousel
 .carousel-control.right > span
 {
 	background-image:url('../images/icons/next.png');
+	right:50%;
 }
 .carousel-control.left > span
 {
 	background-image:url('../images/icons/previous.png');
+	left:50%;
 }
-	
+
+.carousel-indicators 
+{
+	bottom:-16px; /* font size are bigger, so indicator positioning needs to be changed */
+}
