--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,6 +23,7 @@
 		<link rel="stylesheet" href="styles/main.css">
 		<link rel="stylesheet" href="styles/home.css">
 		<link rel="stylesheet" href="styles/carousel.css">	
+		<link rel="stylesheet" href="styles/timeline.css">	
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:100italic,400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles/fonts.css">	
 		<script src='scripts/jquery.js'></script>
