--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -1,3 +1,3 @@
 <header ng-controller="NavbarCtrl">
-	<h1 class="big-title">Humans of Gastown</h1>
+	<img src="images/logo.png" alt="Humans of Gastown"/>
 </header>
