--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -55,7 +55,7 @@
 
 .featured-name
 {
-	font-family: OpenSans-Semibold;
+	font-family: 'OpenSans-Semibold', sans-serif;
 	font-size: 64px;
 	color: #FFFFFF;
 	line-height: 87px;
