--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -7,10 +7,9 @@
 		<carousel id="carousel" interval="myInterval">
 			<slide ng-repeat="slide in slides" active="slide.active">
 				<img width='550px' ng-src="{{slide.picURL}}" style="margin:auto;">
-        <canvas id="canvas" width=300></canvas>
         <div class="featured-caption">
-          <p class="featured-comment">{{slide.folkName}}</p>
-					<p class="featured-name">{{slide.quote}}</p>
+					<p class="featured-comment">{{slide.quote}}</p>
+					<p class="featured-name">{{slide.folkName}}</p>
 					<!--<h4 ng-repeat = "tag in slide.hashTags">{{tag}}</h4>-->
         </div>
 			</slide>
