--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -35,6 +35,8 @@
 			<h3 class="tag-question"> Some question about Gastown </h3>
 			
 			<div id="tag_container" class="tag-container">
+				<p class="most-popular">Most Popular: </p>
+				
 	      <div class="btn-group" ng-repeat = "tag in hashTags">
 	        <a class="tag" btn-checkbox ng-model="checkModel.tag">{{tag}}</a>
 	      </div>
