--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -6,7 +6,25 @@
 	
 		<carousel id="carousel" interval="myInterval">
 			<slide ng-repeat="slide in slides" active="slide.active">
-				<img width='550px' ng-src="{{slide.picURL}}" style="margin:auto;">
+				<div class="image-container">
+					
+					<div class="share-overlay">
+						<ul class="social-media-icons">
+							<li class="facebook-icon">
+								<a href="#"><span class="socicon socicon-facebook"></span></a>
+							</li>
+							<li class="twitter-icon">
+								<a href="#"><span class="socicon socicon-twitter"></span></a>
+							</li>
+							<li class="instagram-icon">
+								<a href="#"><span class="socicon socicon-instagram"></span></a>
+							</li>
+						</ul>
+					</div>
+					
+					<img width='550px' ng-src="{{slide.picURL}}">
+				</div>
+				
         <div class="featured-caption">
 					<p class="featured-comment">{{slide.quote}}</p>
 					<p class="featured-name">{{slide.folkName}}</p>
@@ -23,7 +41,7 @@
 							
 							<ol class="timeline" ng-show="slides.length > 1">
 								<li ng-repeat="slide in slides track by $index" ng-class="{active: isActive($parent.$parent.$parent.slides[$index])}" ng-click="select(slide)" class="active-is-{{$parent.$parent.slides[$index].active}}">
-									<img width='50px' ng-src="{{$parent.$parent.sanitizeUrl($parent.$parent.$parent.slides[$index].picURL)}}" style="margin:auto;">
+										<img width='50px' ng-src="{{$parent.$parent.sanitizeUrl($parent.$parent.$parent.slides[$index].picURL)}}" style="margin:auto;">
 								</li>
 							</ol>
 				    </div>
@@ -32,6 +50,11 @@
 		
 		
 		<section class="tag-section">
+			
+			<div class="tag-icon">
+				<img src="images/icons/comment.png" alt="" />
+			</div>
+			
 			<h3 class="tag-question"> Some question about Gastown </h3>
 			
 			<div id="tag_container" class="tag-container">
