--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -25,6 +25,21 @@
 	src: url('../fonts/OpenSans-Semibold.ttf');
 }
 
+@font-face {
+    font-family: 'socicon';
+    src: url('font/socicon-webfont.eot');
+    src: url('font/socicon-webfont.eot?#iefix') format('embedded-opentype'),
+         url('font/socicon-webfont.woff') format('woff'),
+         url('font/socicon-webfont.ttf') format('truetype'),
+         url('font/socicon-webfont.svg#sociconregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.socicon {
+    font-family: 'socicon' !important;
+}
+
 .big-title
 {
 	font-family:'Caviar', sans-serif;
