--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,8 +26,10 @@
 		<link rel="stylesheet" href="styles/carousel.css">	
 		<link rel="stylesheet" href="styles/timeline.css">	
 		<link rel="stylesheet" href="styles/tags.css">	
+		<link rel="stylesheet" href="styles/share.css">	
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:100italic,400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles/fonts.css">	
+		<link rel="stylesheet" href="styles/socicon.css">	
 		<script src='scripts/jquery.js'></script>
     <!-- endbuild -->
   </head>
