--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -11,13 +11,10 @@
 					<div class="share-overlay">
 						<ul class="social-media-icons">
 							<li class="facebook-icon">
-								<a href="#"><span class="socicon socicon-facebook"></span></a>
+								<a href="https://www.facebook.com/dialog/share?app_id=145634995501895&display=popup&href=https%3A%2F%2Fwww.google.com%2Fdocs%2F&redirect_uri=https%3A%2F%2Fwww.instagram.com"><span class="socicon socicon-facebook"></span></a>
 							</li>
 							<li class="twitter-icon">
-								<a href="#"><span class="socicon socicon-twitter"></span></a>
-							</li>
-							<li class="instagram-icon">
-								<a href="#"><span class="socicon socicon-instagram"></span></a>
+								<a href="https://twitter.com/share?url=www.google.com"><span class="socicon socicon-twitter"></span></a>
 							</li>
 						</ul>
 					</div>
@@ -55,7 +52,7 @@
 				<img src="images/icons/comment.png" alt="" />
 			</div>
 			
-			<h3 class="tag-question"> Some question about Gastown </h3>
+			<h3 class="tag-question"> Your Gastown, Your Tag </h3>
 			
 			<div id="tag_container" class="tag-container">
 				<p class="most-popular">Most Popular: </p>
