--- a/app/styles/share.css
+++ b/app/styles/share.css
@@ -24,7 +24,8 @@
 .social-media-icons
 {
   position:absolute;
-  text-align:justify;
+  /* text-align:justify; justify if we have more than 2 */ 
+  text-align:center;
   width:100%;
 	top:50%;
   margin-top:-72.5px;
@@ -41,12 +42,16 @@
 .social-media-icons li
 {
   display:inline-block;
-  width:30%;
+  width:50%;
   max-width:145px;
   max-height:145px;
   border-radius:72.5px;
   border:7px solid white;
   text-align:center;
+  
+  /* remove padding if we have more than 2 social medias */
+  margin-left:2em;
+  margin-right:2em;
 }
 
 .social-media-icons .socicon
