--- a/app/styles/tags.css
+++ b/app/styles/tags.css
@@ -9,14 +9,49 @@
   color:white;
 }
 
+.tag-container
+{
+  width:100%;
+  margin:auto;
+  padding:3em;
+  text-align:justify;
+}
+
+.tag-container::after
+{
+  display:inline-block;
+  width:100%;
+  content:' ';
+}
+
 .tag
 {
-  border-radius:15px;
-  padding:15px 7px;
-  background-color:black;
+  border-radius:39px;
+  padding:0em 2em;
+  margin:0.5em;
+  background-color:transparent;
   color:white;
-	border: 2px solid white;
+	border: 3px solid white;
 	
 	cursor:pointer;
-	display:block; /* lol hack */
+	display:inline-block; /* lol hack */
+}
+
+.tag.active
+{
+  background-color:white;
+  color:black;
+  border-color:black;
+  transition:color 0.3s ease;
+}
+
+.tag:hover
+{
+  text-decoration:none;
+  color:white;
+}
+
+.tag.active:hover
+{
+  color:black;
 }
