some responsive stuff

--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -11,7 +11,8 @@
 					<div class="share-overlay">
 						<ul class="social-media-icons">
 							<li class="facebook-icon">
-								<a href="https://www.facebook.com/dialog/share?app_id=145634995501895&display=popup&href=https%3A%2F%2Fwww.google.com%2Fdocs%2F&redirect_uri=https%3A%2F%2Fwww.instagram.com"><span class="socicon socicon-facebook"></span></a>
+								<a href="https://www.facebook.com/dialog/share?app_id=145634995501895
+								  &display=popup				&href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2F&redirect_uri=https%3A%2F%2Fdevelopers.facebook.com%2Ftools%2Fexplorer"><span class="socicon socicon-facebook"></span></a>
 							</li>
 							<li class="twitter-icon">
 								<a href="https://twitter.com/share?url=www.google.com"><span class="socicon socicon-twitter"></span></a>
