--- a/app/views/partials/settings.html
+++ b/app/views/partials/settings.html
@@ -2,7 +2,7 @@
 <br>
 <br>
 <div>
-  <!-- <carousel id="carousel" interval="myInterval">
+	<carousel id="carousel" interval="myInterval">
       <slide ng-repeat="slide in slides" active="slide.active">
         <img width='550px' ng-src="{{slide.picURL}}" style="margin:auto;">
         <div class="featured-caption">
@@ -17,12 +17,13 @@
               <a class="right carousel-control" ng-click="next()" ng-show="slides.length > 1"><span></span></a>
             </div>
       </script>
-  </carousel> -->
+  </carousel>
+	<!--
   <div ng-repeat = "slide in slides" style="width:200px;height:200px">{{slide.folkName}}<img ng-src="{{slide.picURL}}" style="margin:auto;">
   </div>
-
+	-->
   <div style = "text-align:center">
-    <button class = "btn btn-warning" ng-click = "logout()">Logout</button>
+    <button class = "btn btn-warning tag" ng-click = "logout()">Logout</button>
   </div>
   <br>
   <br>
