--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,6 +20,8 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
 		<!-- Bootstrap CDN -->
 		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" />
+		
+		<!-- TODO: minify css files -->
 		<link rel="stylesheet" href="styles/normalize.css">
 		<link rel="stylesheet" href="styles/main.css">
 		<link rel="stylesheet" href="styles/home.css">
@@ -27,6 +29,7 @@
 		<link rel="stylesheet" href="styles/timeline.css">	
 		<link rel="stylesheet" href="styles/tags.css">	
 		<link rel="stylesheet" href="styles/share.css">	
+		<link rel="stylesheet" href="styles/modifiers.css">	
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:100italic,400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles/fonts.css">	
 		<link rel="stylesheet" href="styles/socicon.css">	
