--- a/app/styles/timeline.css
+++ b/app/styles/timeline.css
@@ -1,28 +1,36 @@
+.float-wrapper
+{
+  overflow:scroll;
+}
+
 /* ol */
 .timeline 
 {
   display:block;
 	color:white;
-	width:100%;
+	width:900px;
 	text-align:justify;
-	bottom:-5em;
 	z-index:5;
 	padding:0 1em;
+	overflow:auto;
 }
 
 .timeline::after
 {
-  display:inline-block;
   width:100%;
   content:' ';
+  display:inline-block;
 }
 
 .timeline li
 {
   list-style:none;
   display:inline-block;
-  width:90px;
-  height:90px;
+  float:left;
+  width:100%;
+  height:100%;
+  max-width:90px;
+  max-height:90px;
   overflow:hidden;
   border:3px solid #999;
   border-radius:50px;
@@ -30,7 +38,7 @@
   cursor:pointer;
   
   transform:scale(0.8);
-  transition:all ease-in 0.5s;
+  transition:all ease-in 0.3s;
 }
 
 .timeline li img
