Server Side Filtering

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -85,6 +85,7 @@
 				<script src="scripts/controllers/CarouselCtrl.js"></script>
         <script src="scripts/services/PersonService.js"></script>
         <script src="scripts/controllers/Carousel.js"></script>
+        <script src="scripts/filters/filterTag.js"></script>
         <!-- endbuild -->
 </body>
 </html>
