--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -1,13 +1,9 @@
 <div ng-include="'partials/navbar'"></div>
-
 <div class="main-content" ng-controller="CarouselCtrl">
-	
 	<div class="featured-content">
-	
-		<carousel id="carousel" interval="myInterval">
+		<carousel id="carousel">
 			<slide ng-repeat="slide in slides" active="slide.active">
 				<div class="image-container">
-					
 					<div class="share-overlay">
 						<ul class="social-media-icons">
 							<li class="facebook-icon">
@@ -19,13 +15,13 @@
 						</ul>
 					</div>
 					
-					<img width='550px' ng-src="{{slide.picURL}}">
+					<img height='550px' ng-src="{{slide.picURL}}">
 				</div>
 				
         <div class="featured-caption">
 					<p class="featured-comment">{{slide.quote}}</p>
 					<p class="featured-name">{{slide.folkName}}</p>
-					<!--<h4 ng-repeat = "tag in slide.hashTags">{{tag}}</h4>-->
+					<!-- <h4 ng-repeat = "tag in slide.hashTags">{{tag}}</h4> -->
         </div>
 			</slide>
 			
@@ -57,8 +53,8 @@
 			<div id="tag_container" class="tag-container">
 				<p class="most-popular">Most Popular: </p>
 				
-	      <div class="btn-group" ng-repeat = "tag in hashTags">
-	        <a class="tag" btn-checkbox ng-model="checkModel.tag" ng-click="filterTag(tag)">{{tag}}</a>
+	      <div class="btn-group" ng-repeat = "tag in hashTags" >
+	        <a class="tag"  btn-checkbox ng-model="checkModel.tag" ng-click = "updateFilter(tag)">{{tag}}</a>
 	      </div>
 	    </div>
 
