--- a/app/styles/tags.css
+++ b/app/styles/tags.css
@@ -1,7 +1,25 @@
 .tag-section
 {
-  margin-top:4em;
   text-align:center;
+  position:absolute;
+  top:0;
+  left:0;
+  
+  width:100%;
+  height:100%;
+  opacity:0;
+  background:rgba(30, 30, 30, 0.91);
+  padding:40px 20px;
+  
+  transition: opacity 0.3s ease;
+  
+  z-index:1;
+}
+
+.open
+{
+  opacity:1;
+  z-index:11;
 }
 
 .tag-question
@@ -54,4 +72,24 @@
 .tag.active:hover
 {
   color:black;
+}
+
+.tag-icon
+{
+  position:absolute;
+  top:-72px;
+  right:15px;
+  width:52px;
+  height:auto;
+}
+
+.tag-icon img
+{
+  width:100%;
+}
+
+.white-line
+{
+  border-width:2px;
+  width:75%;
 }
