--- a/app/styles/tags.css
+++ b/app/styles/tags.css
@@ -6,7 +6,7 @@
   left:0;
   
   width:100%;
-  height:100%;
+  min-height:100vh;
   opacity:0;
   background:rgba(30, 30, 30, 0.91);
   padding:40px 20px;
