--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -34,7 +34,7 @@
 							<a class="right carousel-control" ng-click="next()" ng-show="slides.length > 1"><span></span></a>
 							
 							<div class="float-wrapper">
-								<ol class="timeline slides-{{slides.length}}" ng-show="slides.length > 0">
+								<ol class="timeline slides-{{slides.length}}" ng-show="slides.length > 0" style="width:{{150*slides.length+1}}px;">
 									<li ng-repeat="slide in slides track by $index" ng-class="{active: isActive($parent.$parent.$parent.slides[$index])}" ng-click="select(slide)" class="active-is-{{$parent.$parent.slides[$index].active}}">
 											<img width='50px' ng-src="{{$parent.$parent.sanitizeUrl($parent.$parent.$parent.slides[$index].picURL)}}" style="margin:auto;">
 									</li>
