--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -60,7 +60,7 @@
 	</section>
 	
 	<div class="tag-icon" ng-click="areTagsOpen = !areTagsOpen">
-		<img src="images/icons/comment.png" alt="" />
+		<img src="images/icons/funnelicon.png" alt="" />
 	</div>
 
 </div>
