Styled login/admin page

--- a/app/views/partials/settings.html
+++ b/app/views/partials/settings.html
@@ -2,6 +2,7 @@
 <br>
 <br>
 <div>
+  <alert type="success">{{message}}</alert>
 	<carousel id="carousel" interval="myInterval">
       <slide ng-repeat="slide in slides" active="slide.active">
         <img width='550px' ng-src="{{slide.picURL}}" style="margin:auto;">
