--- a/app/views/partials/login.html
+++ b/app/views/partials/login.html
@@ -3,21 +3,19 @@
 <div class="row">
   <div class="col-sm-12">
     <h1>Login</h1>
-    <p>Accounts are reset on server restart from <code>dummydata.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
   </div>
-  <div class="col-sm-12">
+  <div class="col-sm-12" >
     <form class="form" name="form" ng-submit="login(form)" novalidate>
+      <div class="form-group" >
+        <label style = "color:white">Email</label>
 
-      <div class="form-group">
-        <label>Email</label>
-
-        <input type="text" name="email" class="form-control" ng-model="user.email">
+        <input type="text" name="email" class="form-control" ng-model="user.email" style= "width:300px">
       </div>
 
       <div class="form-group">
-        <label>Password</label>
+        <label style = "color:white">Password</label>
         
-        <input type="password" name="password" class="form-control" ng-model="user.password">
+        <input type="password" name="password" class="form-control" ng-model="user.password" style= "width:300px">
       </div>
 
       <div class="form-group has-error">
@@ -29,12 +27,5 @@
 
       <button type="submit" class="btn btn-lg btn-primary"> Sign in </button>
     </form>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-12">
-    <hr>
-    Not registered? <a href="/signup" class="text-center new-account">Create an account.</a>
   </div>
 </div>
