--- a/app/styles/carousel.css
+++ b/app/styles/carousel.css
@@ -11,6 +11,14 @@
   width:auto;
 }
 
+@media only screen and (max-width:550px)
+{
+  .image-container img
+  {
+    height:186px;
+  }
+}
+
 .carousel-control
 {
 	background:none !important;
@@ -29,6 +37,18 @@
 	z-index:5;
 	display:inline-block;
 	margin-top:-20px;
+}
+
+@media only screen and (max-width:550px)
+{
+  .carousel-control > span
+  {
+    width:20px !important;
+    height:35px !important;
+    background-size:cover;
+    top:103px; /* 93, which is the image height + 10 which is the arrow height */
+  }
+  
 }
 
 .carousel-control > span:before
