--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -1,3 +1,3 @@
-<header ng-controller="NavbarCtrl">
+<!--<header ng-controller="NavbarCtrl">
 	<img src="images/logo.png" alt="Humans of Gastown"/>
-</header>
+</header>-->
